RESOLVED FIXED55305
Asynchronous response to FramePolicyListener is not finishing the load
https://bugs.webkit.org/show_bug.cgi?id=55305
Summary Asynchronous response to FramePolicyListener is not finishing the load
Anders Carlsson
Reported 2011-02-26 12:58:20 PST
Asynchronous response to FramePolicyListener is not finishing the load
Attachments
Patch (1.95 KB, patch)
2011-02-26 12:59 PST, Anders Carlsson
mitz: review+
Anders Carlsson
Comment 1 2011-02-26 12:59:08 PST
Anders Carlsson
Comment 2 2011-02-26 13:02:14 PST
WebKit Review Bot
Comment 3 2011-02-26 15:01:36 PST
Attachment 83950 [details] did not pass style-queue: Failed to run "['Tools/Scripts/update-webkit']" exit_code: 9 perl: warning: Setting locale failed. perl: warning: Please check that your locale settings: LANGUAGE = (unset), LC_ALL = (unset), LANG = "en_US.US-ASCII" are supported and installed on your system. perl: warning: Falling back to the standard locale ("C"). Updating OpenSource perl: warning: Setting locale failed. perl: warning: Please check that your locale settings: LANGUAGE = (unset), LC_ALL = (unset), LANG = "en_US.US-ASCII" are supported and installed on your system. perl: warning: Falling back to the standard locale ("C"). RA layer request failed: OPTIONS of 'http://svn.webkit.org/repository/webkit': timed out waiting for server (http://svn.webkit.org) at /usr/lib/git-core/git-svn line 2295 Died at Tools/Scripts/update-webkit line 130. If any of these errors are false positives, please file a bug against check-webkit-style.
Note You need to log in before you can comment on or make changes to this bug.