2011-02-26  Anders Carlsson  <andersca@apple.com>

Reviewed by Dan Bernstein.

        Asynchronous response to FramePolicyListener is not finishing the load
        https://bugs.webkit.org/show_bug.cgi?id=55305
        <rdar://problem/9044356>

        Always initialize the receivedPolicyAction reply parameter.

        * UIProcess/WebPageProxy.cpp:
        (WebKit::WebPageProxy::decidePolicyForNavigationAction):
        (WebKit::WebPageProxy::decidePolicyForMIMEType):


Canonical link: https://commits.webkit.org/69724@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79807 268f45cc-cd09-0410-ab3c-d52691b4dbfc